// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`askNotificationPermissions onRegister should update notification token for android devices 1`] = `
Array [
  Array [
    Object {
      "FETCH": "SET_PUSH_TOKEN_FETCH",
      "SUCCESS": "SET_PUSH_TOKEN_SUCCESS",
      "endpoint": "undefined/apis/v4/push_notification_device_tokens",
      "method": "post",
      "name": "SET_PUSH_TOKEN",
    },
    Object {
      "include": "",
    },
    Object {
      "data": Object {
        "attributes": Object {
          "platform": "GCM",
          "token": "New Token",
        },
        "type": "push_notification_device_token",
      },
    },
  ],
]
`;

exports[`askNotificationPermissions onRegister should update notification token for android devices 2`] = `
Array [
  Object {
    "type": "SET_PUSH_TOKEN_SUCCESS",
  },
  Object {
    "type": "app/REQUEST_NOTIFICATIONS",
  },
]
`;

exports[`askNotificationPermissions onRegister should update notification token for iOS devices 1`] = `
Array [
  Array [
    Object {
      "FETCH": "SET_PUSH_TOKEN_FETCH",
      "SUCCESS": "SET_PUSH_TOKEN_SUCCESS",
      "endpoint": "undefined/apis/v4/push_notification_device_tokens",
      "method": "post",
      "name": "SET_PUSH_TOKEN",
    },
    Object {
      "include": "",
    },
    Object {
      "data": Object {
        "attributes": Object {
          "platform": "APNS",
          "token": "New Token",
        },
        "type": "push_notification_device_token",
      },
    },
  ],
]
`;

exports[`askNotificationPermissions onRegister should update notification token for iOS devices 2`] = `
Array [
  Object {
    "type": "SET_PUSH_TOKEN_SUCCESS",
  },
  Object {
    "type": "app/REQUEST_NOTIFICATIONS",
  },
]
`;
